--- a/index.html
+++ b/index.html
@@ -136,7 +136,7 @@
 			</div>
 			<div class="md-wrong md-answer" id="modal-wrong">
 				<div class="md-content">
-					<h6 class="wow fadeInDown" data-wow-duration="0.5" data-wow-delay="0.3s">rất tiếc,<br> bạn đã trả lời sai</h6>
+					<h6 class="wow fadeInDown" data-wow-duration="0.5" data-wow-delay="0.3s">rất tiếc, bạn đã trả lời sai</h6>
 					<span class="wow fadeInDown" data-wow-duration="0.5" data-wow-delay="0.5s">hãy thử lại lần nữa nhé!</span>
 					<a href="https://www.vichy.com.vn/" class="wow zoomIn" data-wow-duration="0.5" data-wow-delay="0.7s">thử lại</a>
 				</div>
@@ -240,7 +240,6 @@
 			<div class="md-img">
 				<img src="./images/banner-2.png" alt="" class="md-desktop">
 				<img src="./images/banner-2-mb.png" alt="" class="md-mobile">
-				<img src="./images/text-1.png" alt="" class="md-text-1 md-desktop">
 			</div>
 			<div class="bg-op-1"></div>
 		</div>
