--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
 					    </div>
 					  </div>
 					</div>
-					<input type="button" value="xem kết quả" class="wow zoomIn" data-wow-duration="0.5" data-wow-delay="1.2s">
+					<input type="button" value="xem kết quả" data-fancybox-close="" class="fancybox-button fancybox-close-small wow zoomIn md-close-popup" title="Close"  data-wow-duration="0.5" data-wow-delay="1.2s">
 				</div>
 				<div class="md-content" id="answer-2">
 					<h6 class="wow fadeInDown"  data-wow-duration="0.5" data-wow-delay="0.1s">trả lời câu hỏi nhận ngay quà tặng</h6>
@@ -103,7 +103,7 @@
 					    </div>
 					  </div>
 					</div>
-					<input type="button" value="xem kết quả" class="wow zoomIn" data-wow-duration="0.5" data-wow-delay="1.2s">
+					<input type="button" value="xem kết quả" data-fancybox-close="" class="fancybox-button fancybox-close-small wow zoomIn md-close-popup" title="Close"  data-wow-duration="0.5" data-wow-delay="1.2s">
 				</div>
 				<div class="md-content" id="answer-3">
 					<h6 class="wow fadeInDown"  data-wow-duration="0.5" data-wow-delay="0.1s">trả lời câu hỏi nhận ngay quà tặng</h6>
@@ -131,7 +131,7 @@
 					    </div>
 					  </div>
 					</div>
-					<input type="button" value="xem kết quả" class="wow zoomIn" data-wow-duration="0.5" data-wow-delay="1.2s">
+					<input type="button" value="xem kết quả" data-fancybox-close="" class="fancybox-button fancybox-close-small wow zoomIn md-close-popup" title="Close"  data-wow-duration="0.5" data-wow-delay="1.2s">
 				</div>
 			</div>
 			<div class="md-wrong md-answer" id="modal-wrong">
