--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
 					    </div>
 					  </div>
 					</div>
-					<input type="button" value="xem kết quả" data-fancybox-close="" class="fancybox-button fancybox-close-small wow zoomIn md-close-popup" title="Close"  data-wow-duration="0.5" data-wow-delay="1.2s">
+					<input type="button" value="xem kết quả"  data-fancybox="" data-src="#modal-wrong" href="javascript:;" data-fancybox-close="" class="fancybox-button fancybox-close-small wow zoomIn md-close-popup ctn-close" title="Close"  data-wow-duration="0.5" data-wow-delay="1.2s">
 				</div>
 				<div class="md-content" id="answer-2">
 					<h6 class="wow fadeInDown"  data-wow-duration="0.5" data-wow-delay="0.1s">trả lời câu hỏi nhận ngay quà tặng</h6>
@@ -103,7 +103,7 @@
 					    </div>
 					  </div>
 					</div>
-					<input type="button" value="xem kết quả" data-fancybox-close="" class="fancybox-button fancybox-close-small wow zoomIn md-close-popup" title="Close"  data-wow-duration="0.5" data-wow-delay="1.2s">
+					<input type="button" value="xem kết quả"  data-fancybox="" data-src="#modal-wrong" href="javascript:;" data-fancybox-close="" class="fancybox-button fancybox-close-small wow zoomIn md-close-popup ctn-close" title="Close"  data-wow-duration="0.5" data-wow-delay="1.2s">
 				</div>
 				<div class="md-content" id="answer-3">
 					<h6 class="wow fadeInDown"  data-wow-duration="0.5" data-wow-delay="0.1s">trả lời câu hỏi nhận ngay quà tặng</h6>
@@ -131,14 +131,14 @@
 					    </div>
 					  </div>
 					</div>
-					<input type="button" value="xem kết quả" data-fancybox-close="" class="fancybox-button fancybox-close-small wow zoomIn md-close-popup" title="Close"  data-wow-duration="0.5" data-wow-delay="1.2s">
+					<input type="button" value="xem kết quả"  data-fancybox="" data-src="#modal-wrong" href="javascript:;" data-fancybox-close="" class="fancybox-button fancybox-close-small wow zoomIn md-close-popup ctn-close" title="Close"  data-wow-duration="0.5" data-wow-delay="1.2s">
 				</div>
 			</div>
 			<div class="md-wrong md-answer" id="modal-wrong">
 				<div class="md-content">
 					<h6 class="wow fadeInDown" data-wow-duration="0.5" data-wow-delay="0.3s">rất tiếc, bạn đã trả lời sai</h6>
 					<span class="wow fadeInDown" data-wow-duration="0.5" data-wow-delay="0.5s">hãy thử lại lần nữa nhé!</span>
-					<a href="https://www.vichy.com.vn/" class="wow zoomIn" data-wow-duration="0.5" data-wow-delay="0.7s">thử lại</a>
+					<a  data-fancybox="" data-src="#provn-1" href="javascript:;" class="ctn-button wow zoomIn" data-wow-duration="0.5" data-wow-delay="0.7s">thử lại</a>
 				</div>
 			</div>
 			<div class="md-correct" id="modal-correct">
