--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
 			<div class="bg-op-1"></div>
 			<div class="md-answer" id="provn-1">
 				<div class="md-content" id="answer-1">
-					<h6 class="wow fadeInDown"  data-wow-duration="0.5" data-wow-delay="0.1s">trả lời câu hỏi nhận ngay quà tặng</h6>
+					<h6 class="wow fadeInDown"  data-wow-duration="0.5" data-wow-delay="0.1s">trả lời câu hỏi <br> nhận ngay quà tặng</h6>
 					<p class="wow fadeInDown" data-wow-delay="0.3s"  data-wow-duration="0.5">Câu 1:</p>
 					<div class="ui form">
 					  <div class="grouped fields">
@@ -72,7 +72,7 @@
 					<input type="button" value="xem kết quả"  data-fancybox="" data-src="#modal-wrong" href="javascript:;" data-fancybox-close="" class="fancybox-button fancybox-close-small wow zoomIn md-close-popup ctn-close" title="Close"  data-wow-duration="0.5" data-wow-delay="1.2s">
 				</div>
 				<div class="md-content" id="answer-2">
-					<h6 class="wow fadeInDown"  data-wow-duration="0.5" data-wow-delay="0.1s">trả lời câu hỏi nhận ngay quà tặng</h6>
+					<h6 class="wow fadeInDown"  data-wow-duration="0.5" data-wow-delay="0.1s">trả lời câu hỏi <br> nhận ngay quà tặng</h6>
 					<p class="wow fadeInDown" data-wow-delay="0.3s"  data-wow-duration="0.5">Câu 2:</p>
 					<div class="ui form">
 					  <div class="grouped fields">
@@ -106,7 +106,7 @@
 					<input type="button" value="xem kết quả"  data-fancybox="" data-src="#modal-wrong" href="javascript:;" data-fancybox-close="" class="fancybox-button fancybox-close-small wow zoomIn md-close-popup ctn-close" title="Close"  data-wow-duration="0.5" data-wow-delay="1.2s">
 				</div>
 				<div class="md-content" id="answer-3">
-					<h6 class="wow fadeInDown"  data-wow-duration="0.5" data-wow-delay="0.1s">trả lời câu hỏi nhận ngay quà tặng</h6>
+					<h6 class="wow fadeInDown"  data-wow-duration="0.5" data-wow-delay="0.1s">trả lời câu hỏi <br> nhận ngay quà tặng</h6>
 					<p class="wow fadeInDown" data-wow-delay="0.3s"  data-wow-duration="0.5">Câu 3:</p>
 					<div class="ui form">
 					  <div class="grouped fields">
@@ -136,7 +136,7 @@
 			</div>
 			<div class="md-wrong md-answer" id="modal-wrong">
 				<div class="md-content">
-					<h6 class="wow fadeInDown" data-wow-duration="0.5" data-wow-delay="0.3s">rất tiếc, bạn đã trả lời sai</h6>
+					<h6 class="wow fadeInDown" data-wow-duration="0.5" data-wow-delay="0.3s">rất tiếc,<br> bạn đã trả lời sai</h6>
 					<span class="wow fadeInDown" data-wow-duration="0.5" data-wow-delay="0.5s">hãy thử lại lần nữa nhé!</span>
 					<a  data-fancybox="" data-src="#provn-1" href="javascript:;" class="ctn-button wow zoomIn" data-wow-duration="0.5" data-wow-delay="0.7s">thử lại</a>
 				</div>
