--- a/index.html
+++ b/index.html
@@ -217,7 +217,8 @@
 			</div>
 			<form id="the-le" action="" method="post" class="md-dieukhoan">
 				<div class="content-the-le">
-					<p>Trong trường hợp khách hàng điền sai thông tin, nhãn hàng miễn trừ trách nhiệm và phần quà bị vô hiệu.</p>
+					<a href="javascript:void(0)" class="logo-popup"><img src="https://www.vichyhieudanhuchuyengia.com.vn/skin/front/vichyquizz/images/logo-loreal.jpg" alt=""></a>
+					<p><a href="#"></a>Trong trường hợp khách hàng điền sai thông tin, nhãn hàng miễn trừ trách nhiệm và phần quà bị vô hiệu.</p>
 					<p class="futura-bold">Điều khoản về việc cho phép và đồng ý nhận thông tin marketing và sử dụng dữ liệu cá nhân</p>
 					<p>Quý vị đồng ý cho L’Oreal Việt Nam, các công ty liên kết, đại lý/đại diện và bên cung cấp dịch vụ của L’Oreal Việt Nam (tại Việt Nam và/hoặc ở bất kỳ nơi nào khác) thu thập, sử dụng, tiết lộ và xử lý các dữ liệu cá nhân của quý vị, và cung cấp cho quý vị các thông tin marketing, tài liệu marketing về các sản phẩm, dịch vụ hoặc sự kiện của L’Oreal Việt Nam.</p>
 					<p>L’Oréal chúng tôi cam kết bảo vệ và tôn trọng quyền riêng tư của quý vị. Chính sách về Quyền riêng tư của chúng tôi sẽ giải thích các loại thông tin cá nhân nào chúng tôi thu thập, cách thức chúng tôi sử dụng thông tin đó, đối tượng nào được chúng tôi chia sẻ thông tin đó, và chúng tôi bảo vệ thông tin đó như thế nào. Quý vị có thể tham khảo Chính sách về Quyền riêng tư của chúng tôi tại [www.vichy.com.vn hoặc www.larocheposay.vn].</p>
