update html css js

--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
 		</div>
 	</header>
 	<main class="main-page clearfix">
-		<div class="left-content">
+		<div class="left-content md-set-height">
 			<img src="./images/banner-0.png" alt="" class="main-img">
 			<a class="ctn-button" data-fancybox="" data-src="#provn-1" href="javascript:;"><div class="md-popup-1 "><img src="./images/ico-click.png" alt=""><img src="./images/light.png" alt="" class="img-light"></div></a>
 			<a class="ctn-button" data-fancybox="" data-src="#provn-1" href="javascript:;"><div class="md-popup-0 md-popup-2"><img src="./images/ico-click.png" alt=""><img src="./images/light.png" alt="" class="img-light"></div></a>
@@ -267,7 +267,7 @@
 
 			</div>
 		</div>
-		<div class="right-content">
+		<div class="right-content md-set-height">
 			<div class="md-img">
 				<img src="./images/banner-2.png" alt="" class="md-desktop">
 				<img src="./images/banner-2-mb.png" alt="" class="md-mobile">
