--- a/index.html
+++ b/index.html
@@ -25,22 +25,124 @@
 	<main class="main-page clearfix">
 		<div class="left-content md-set-height">
 			<img src="./images/banner-0.png" alt="" class="main-img">
-			<a class="ctn-button" data-fancybox="" data-src="#provn-1" href="javascript:;"><div class="md-popup-1 "><img src="./images/ico-click.png" alt=""><img src="./images/light.png" alt="" class="img-light"></div></a>
-			<a class="ctn-button" data-fancybox="" data-src="#provn-1" href="javascript:;"><div class="md-popup-0 md-popup-2"><img src="./images/ico-click.png" alt=""><img src="./images/light.png" alt="" class="img-light"></div></a>
-			<a class="ctn-button" data-fancybox="" data-src="#provn-1" href="javascript:;">	<div class="md-popup-0 md-popup-3"><img src="./images/ico-click.png" alt=""><img src="./images/light.png" alt="" class="img-light"></div></a>
-			<a class="ctn-button" data-fancybox="" data-src="#provn-1" href="javascript:;">	<div class="md-popup-0 md-popup-4"><img src="./images/ico-click.png" alt=""><img src="./images/light.png" alt="" class="img-light"></div></a>
-			<a class="ctn-button" data-fancybox="" data-src="#provn-1" href="javascript:;">	<div class="md-popup-0 md-popup-5"><img src="./images/ico-click.png" alt=""><img src="./images/light.png" alt="" class="img-light"></div></a>
-			<a class="ctn-button" data-fancybox="" data-src="#provn-1" href="javascript:;">	<div class="md-popup-0 md-popup-6"><img src="./images/ico-click.png" alt=""><img src="./images/light.png" alt="" class="img-light"></div></a>
-			<a class="ctn-button" data-fancybox="" data-src="#provn-1" href="javascript:;">	<div class="md-popup-0 md-popup-7"><img src="./images/ico-click.png" alt=""><img src="./images/light.png" alt="" class="img-light"></div></a>
-			<a class="ctn-button" data-fancybox="" data-src="#provn-1" href="javascript:;">	<div class="md-popup-0 md-popup-8"><img src="./images/ico-click.png" alt=""><img src="./images/light.png" alt="" class="img-light"></div></a>
-			<a class="ctn-button" data-fancybox="" data-src="#provn-1" href="javascript:;">	<div class="md-popup-0 md-popup-9"><img src="./images/ico-click.png" alt=""><img src="./images/light.png" alt="" class="img-light"></div></a>
-			<a class="ctn-button" data-fancybox="" data-src="#provn-1" href="javascript:;"><div class="md-popup-0 md-popup-10"><img src="./images/ico-click.png" alt=""><img src="./images/light.png" alt="" class="img-light"></div></a>
-			<a class="ctn-button" data-fancybox="" data-src="#provn-1" href="javascript:;"><div class="md-popup-0 md-popup-11"><img src="./images/ico-click.png" alt=""><img src="./images/light.png" alt="" class="img-light"></div></a>
-			<a class="ctn-button" data-fancybox="" data-src="#provn-1" href="javascript:;"><div class="md-popup-0 md-popup-12"><img src="./images/ico-click.png" alt=""><img src="./images/light.png" alt="" class="img-light"></div></a>
-			<a class="ctn-button" data-fancybox="" data-src="#provn-1" href="javascript:;"><div class="md-popup-0 md-popup-13"><img src="./images/ico-click.png" alt=""><img src="./images/light.png" alt="" class="img-light"></div></a>
-			<div class="md-text">
-				<img src="./images/text-banner.png" alt="">
-			</div>
+			<a class="ctn-button" data-fancybox="" data-src="#provn-1" href="javascript:;">
+				<div class="md-popup-1 md-popup ">
+					<img src="./images/ico-click.png" alt="" class="img-click">
+					<img src="./images/light.png" alt="" class="img-light">
+					<div class="md-text">
+						<p>Chạm ngay! <span>CHO LÀN DA TƯƠI SÁNG ĐỀU MÀU​</span></p>
+					</div>
+				</div>
+			</a>
+			<a class="ctn-button" data-fancybox="" data-src="#provn-1" href="javascript:;">
+				<div class="md-popup-0 md-popup md-popup-2">
+					<img src="./images/ico-click.png" alt="" class="img-click">
+					<img src="./images/light.png" alt="" class="img-light">
+					<div class="md-text">
+						<p>Chạm ngay! <span>CHO LÀN DA TƯƠI SÁNG ĐỀU MÀU​</span></p>
+					</div>
+				</div>
+			</a>
+			<a class="ctn-button" data-fancybox="" data-src="#provn-1" href="javascript:;">
+				<div class="md-popup-0 md-popup md-popup-3">
+					<img src="./images/ico-click.png" alt="" class="img-click">
+					<img src="./images/light.png" alt="" class="img-light">
+					<div class="md-text">
+						<p>Chạm ngay! <span>CHO LÀN DA TƯƠI SÁNG ĐỀU MÀU​</span></p>
+					</div>
+				</div>
+			</a>
+			<a class="ctn-button" data-fancybox="" data-src="#provn-1" href="javascript:;">
+				<div class="md-popup-0 md-popup md-popup-4">
+					<img src="./images/ico-click.png" alt="" class="img-click">
+					<img src="./images/light.png" alt="" class="img-light">
+					<div class="md-text">
+						<p>Chạm ngay! <span>CHO LÀN DA TƯƠI SÁNG ĐỀU MÀU​</span></p>
+					</div>
+				</div>
+			</a>
+			<a class="ctn-button" data-fancybox="" data-src="#provn-1" href="javascript:;">
+				<div class="md-popup-0 md-popup md-popup-5">
+					<img src="./images/ico-click.png" alt="" class="img-click">
+					<img src="./images/light.png" alt="" class="img-light">
+					<div class="md-text">
+						<p>Chạm ngay! <span>CHO LÀN DA TƯƠI SÁNG ĐỀU MÀU​</span></p>
+					</div>
+				</div>
+			</a>
+			<a class="ctn-button" data-fancybox="" data-src="#provn-1" href="javascript:;">
+				<div class="md-popup-0 md-popup md-popup-6">
+					<img src="./images/ico-click.png" alt="" class="img-click">
+					<img src="./images/light.png" alt="" class="img-light">
+					<div class="md-text">
+						<p>Chạm ngay! <span>CHO LÀN DA TƯƠI SÁNG ĐỀU MÀU​</span></p>
+					</div>
+				</div>
+			</a>
+			<a class="ctn-button" data-fancybox="" data-src="#provn-1" href="javascript:;">
+				<div class="md-popup-0 md-popup md-popup-7">
+					<img src="./images/ico-click.png" alt="" class="img-click">
+					<img src="./images/light.png" alt="" class="img-light">
+					<div class="md-text">
+						<p>Chạm ngay! <span>CHO LÀN DA TƯƠI SÁNG ĐỀU MÀU​</span></p>
+					</div>
+				</div>
+			</a>
+			<a class="ctn-button" data-fancybox="" data-src="#provn-1" href="javascript:;">
+				<div class="md-popup-0 md-popup md-popup-8">
+					<img src="./images/ico-click.png" alt="" class="img-click">
+					<img src="./images/light.png" alt="" class="img-light">
+					<div class="md-text">
+						<p>Chạm ngay! <span>CHO LÀN DA TƯƠI SÁNG ĐỀU MÀU​</span></p>
+					</div>
+				</div>
+			</a>
+			<a class="ctn-button" data-fancybox="" data-src="#provn-1" href="javascript:;">
+				<div class="md-popup-0 md-popup md-popup-9">
+					<img src="./images/ico-click.png" alt="" class="img-click">
+					<img src="./images/light.png" alt="" class="img-light">
+					<div class="md-text">
+						<p>Chạm ngay! <span>CHO LÀN DA TƯƠI SÁNG ĐỀU MÀU​</span></p>
+					</div>
+				</div>
+			</a>
+			<a class="ctn-button" data-fancybox="" data-src="#provn-1" href="javascript:;">
+				<div class="md-popup-0 md-popup md-popup-10">
+					<img src="./images/ico-click.png" alt="" class="img-click">
+					<img src="./images/light.png" alt="" class="img-light">
+					<div class="md-text">
+						<p>Chạm ngay! <span>CHO LÀN DA TƯƠI SÁNG ĐỀU MÀU​</span></p>
+					</div>
+				</div>
+			</a>
+			<a class="ctn-button" data-fancybox="" data-src="#provn-1" href="javascript:;">
+				<div class="md-popup-0 md-popup md-popup-11">
+					<img src="./images/ico-click.png" alt="" class="img-click">
+					<img src="./images/light.png" alt="" class="img-light">
+					<div class="md-text">
+						<p>Chạm ngay! <span>CHO LÀN DA TƯƠI SÁNG ĐỀU MÀU​</span></p>
+					</div>
+				</div>
+			</a>
+			<a class="ctn-button" data-fancybox="" data-src="#provn-1" href="javascript:;">
+				<div class="md-popup-0 md-popup md-popup-12">
+					<img src="./images/ico-click.png" alt="" class="img-click">
+					<img src="./images/light.png" alt="" class="img-light">
+					<div class="md-text">
+						<p>Chạm ngay! <span>CHO LÀN DA TƯƠI SÁNG ĐỀU MÀU​</span></p>
+					</div>
+				</div>
+			</a>
+			<a class="ctn-button" data-fancybox="" data-src="#provn-1" href="javascript:;">
+				<div class="md-popup-0 md-popup md-popup-13">
+					<img src="./images/ico-click.png" alt="" class="img-click">
+					<img src="./images/light.png" alt="" class="img-light">
+					<div class="md-text">
+						<p>Chạm ngay! <span>CHO LÀN DA TƯƠI SÁNG ĐỀU MÀU​</span></p>
+					</div>
+				</div>
+			</a>
+			
 			<div class="bg-op-1"></div>
 			<div class="md-answer" id="provn-1">
 				<div class="bg-op-5"></div>
