--- a/index.html
+++ b/index.html
@@ -186,7 +186,7 @@
 						    </div>
 						  </div>
 						</div>
-						<input type="button" value="xem kết quả"  data-fancybox="" data-src="#modal-wrong" href="javascript:;" data-fancybox-close="" class="fancybox-button fancybox-close-small wow zoomIn md-close-popup ctn-close" title="Close"  data-wow-duration="0.5" data-wow-delay="1.2s">
+						<input type="button" value="xem kết quả"  data-fancybox="" data-src="#modal-correct" href="javascript:;" data-fancybox-close="" class="fancybox-button fancybox-close-small wow zoomIn md-close-popup ctn-close" title="Close"  data-wow-duration="0.5" data-wow-delay="1.2s">
 					</div>
 				</div>
 				<div class="md-content" id="answer-2">
@@ -222,7 +222,7 @@
 						    </div>
 						  </div>
 						</div>
-						<input type="button" value="xem kết quả"  data-fancybox="" data-src="#modal-wrong" href="javascript:;" data-fancybox-close="" class="fancybox-button fancybox-close-small wow zoomIn md-close-popup ctn-close" title="Close"  data-wow-duration="0.5" data-wow-delay="1.2s">
+						<input type="button" value="xem kết quả"  data-fancybox="" data-src="#modal-correct" href="javascript:;" data-fancybox-close="" class="fancybox-button fancybox-close-small wow zoomIn md-close-popup ctn-close" title="Close"  data-wow-duration="0.5" data-wow-delay="1.2s">
 					</div>
 				</div>
 				<div class="md-content" id="answer-3">
@@ -252,7 +252,7 @@
 						    </div>
 						  </div>
 						</div>
-						<input type="button" value="xem kết quả"  data-fancybox="" data-src="#modal-wrong" href="javascript:;" data-fancybox-close="" class="fancybox-button fancybox-close-small wow zoomIn md-close-popup ctn-close" title="Close"  data-wow-duration="0.5" data-wow-delay="1.2s">
+						<input type="button" value="xem kết quả"  data-fancybox="" data-src="#modal-correct" href="javascript:;" data-fancybox-close="" class="fancybox-button fancybox-close-small wow zoomIn md-close-popup ctn-close" title="Close"  data-wow-duration="0.5" data-wow-delay="1.2s">
 					</div>
 				</div>
 			</div>
