--- a/index.html
+++ b/index.html
@@ -269,10 +269,10 @@
 			</div>
 			<div class="md-correct" id="modal-correct">
 				<div class="md-content clearfix">
-					<div class="md-right-content wow fadeInRight" data-wow-duration="0.5" >
+					<div class="md-right-content " >
 						<img src="./images/img-form.png" alt="">
 					</div>
-					<div class="md-left-content wow fadeInLeft" data-wow-duration="0.5" >
+					<div class="md-left-content " >
 						<form action="">
 							<h6>ĐIỀN THÔNG TIN<br> ĐỂ NHẬN QUÀ TẠi ĐÂY</h6>
 							<div class="md-col clearfix">
